# Unobtanium

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  SECURITY.md  configure.ac  libbitcoinconsensus.pc.in  libunobtaniumconsensus.pc.in  unobtanium-qt.pro  unobtanium.pro
.github/workflows/: ccpp.yml
build-aux/m4/: ax_boost_program_options.m4  bitcoin_find_bdb48.m4  bitcoin_qt.m4  unobtanium_find_bdb48.m4  unobtanium_qt.m4  unobtanium_subdir_to_include.m4
contrib/: README.md  install_db4.sh
contrib/bitrpc/: bitrpc.py
contrib/build_win_on_linux/: coin.sh  deps.sh  nsis.sh
contrib/debian/: changelog  control  rules
contrib/devtools/: README.md  gen-manpages.sh  utxo_snapshot.sh
contrib/gentoo/: README.md  unobtanium-qt-0.11.5.ebuild
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/homebrew/: makefile.osx.patch  unobtanium.pro.homebrew
contrib/init/: README.md  bitcoind.conf  unobtaniumd.openrc  unobtaniumd.openrcconf  unobtaniumd.service
contrib/linearize/: example-linearize.cfg
contrib/macdeploy/: README.md  background.psd  background.tiff  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py  makeseeds.sh  nodes_main.txt  nodes_test.txt
depends/: Makefile  config.site.in
depends/builders/: darwin.mk
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  build-osx.md  build-unix.md  dependencies.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  tor.md  unit-tests.md  unobtanium-conf.md
share/: genbuild.sh  setup.nsi  setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  auxpow.cpp  auxpow.h  base58.cpp  base58.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.cpp  (+90 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: params.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/leveldb/util/: hash.cc
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: aboutdialog.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  (+58 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.qm  bitcoin_af_ZA.ts  bitcoin_ar.qm  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.qm  bitcoin_bg.ts  bitcoin_bs.qm  bitcoin_bs.ts  bitcoin_ca.qm  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.qm  bitcoin_ca_ES.ts  bitcoin_cs.qm  bitcoin_cs.ts  bitcoin_cy.qm  bitcoin_cy.ts  bitcoin_da.qm  bitcoin_da.ts  bitcoin_de.qm  bitcoin_de.ts  bitcoin_el_GR.qm  bitcoin_el_GR.ts  bitcoin_en.qm  bitcoin_en.ts  bitcoin_eo.qm  bitcoin_eo.ts  bitcoin_es.qm  bitcoin_es.ts  bitcoin_es_CL.qm  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.qm  bitcoin_et.ts  bitcoin_eu_ES.qm  bitcoin_eu_ES.ts  bitcoin_fa.qm  (+69 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  unobtaniumconsensus.cpp
src/secp256k1/src/: libsecp256k1-config.h  libsecp256k1-config.h.in
src/support/: cleanse.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_bitcoin.cpp  timedata_tests.cpp  transaction_tests.cpp  uint256_tests.cpp  univalue_tests.cpp  (+2 more)
src/test/data/: script_invalid.json  script_valid.json
src/univalue/: univalue.cpp  univalue_read.cpp
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcrawtransaction.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
(+85 files in other folders)
